erDiagram
%% User Management %%
    USER {
        Long id PK
        String username "Unique"
        String email "Unique"
        String password_hash "BCrypt"
        String first_name
        String last_name
        Boolean enabled
        LocalDateTime created_at
    }

    ROLE {
        Long id PK
        String name "ROLE_USER, ROLE_ADMIN"
    }

    USER_ROLES {
        Long user_id FK
        Long role_id FK
    }

%% Financial Core %%
    WALLET {
        Long id PK
        BigDecimal balance "Default 0.00"
        String currency "USD, EUR, GBP, EGP..."
        Long version "Optimistic Lock"
        Boolean active
        Long user_id FK
        LocalDateTime created_at
        LocalDateTime updated_at
    }

    TRANSACTION {
        Long id PK
        BigDecimal amount
        String type "TRANSFER, DEPOSIT, WITHDRAW"
        String status "PENDING, SUCCESS, FAILED"
        String description
        LocalDateTime created_at
        Long sender_wallet_id FK
        Long receiver_wallet_id FK
    }

%% Loan System %%
    LOAN_APPLICATION {
        Long id PK
        BigDecimal amount
        BigDecimal interest_rate
        Integer term_months
        String status "PENDING, APPROVED, REJECTED"
        String purpose
        LocalDateTime created_at
        Long user_id FK
    }

%% Support System %%
    SUPPORT_TICKET {
        Long id PK
        String subject
        String description
        String category
        String status "OPEN, IN_PROGRESS, RESOLVED, CLOSED"
        LocalDateTime created_at
        Long user_id FK
    }

    SUPPORT_TICKET_RESPONSE {
        Long id PK
        String message
        LocalDateTime created_at
        Long ticket_id FK
        Long sender_id FK
    }

%% Audit %%
    AUDIT_LOG {
        Long id PK
        String action
        String entity_type
        Long entity_id
        String details
        LocalDateTime created_at
        Long user_id FK
    }

%% Relationships %%
    USER ||--o{ USER_ROLES : "has"
    ROLE ||--o{ USER_ROLES : "assigned to"

    USER ||--o{ WALLET : "owns"
    USER ||--o{ LOAN_APPLICATION : "applies for"
    USER ||--o{ SUPPORT_TICKET : "creates"
    USER ||--o{ AUDIT_LOG : "generates"

    WALLET ||--o{ TRANSACTION : "sends"
    WALLET ||--o{ TRANSACTION : "receives"

    SUPPORT_TICKET ||--o{ SUPPORT_TICKET_RESPONSE : "has"
    USER ||--o{ SUPPORT_TICKET_RESPONSE : "writes"